# rtxdi-runtime

./: CMakeLists.txt  README.md
Include/Rtxdi/: ImportanceSamplingContext.h  RtxdiParameters.h  RtxdiUtils.h
Include/Rtxdi/DI/: BoilingFilter.hlsli  InitialSampling.hlsli  PairwiseStreaming.hlsli  ReSTIRDI.h  ReSTIRDIParameters.h  Reservoir.hlsli  SpatialResampling.hlsli  SpatioTemporalResampling.hlsli  TemporalResampling.hlsli
Include/Rtxdi/GI/: BoilingFilter.hlsli  JacobianMath.hlsli  ReSTIRGI.h  ReSTIRGIParameters.h  Reservoir.hlsli  SpatialResampling.hlsli  SpatioTemporalResampling.hlsli  TemporalResampling.hlsli
Include/Rtxdi/LightSampling/: LocalLightSelection.hlsli  PresamplingFunctions.hlsli  RISBuffer.hlsli  RISBufferSegmentParameters.h  UniformSampling.hlsli
Include/Rtxdi/ReGIR/: ReGIR.h  ReGIRParameters.h  ReGIRSampling.hlsli
Include/Rtxdi/Utils/: BoilingFilter.hlsli  Checkerboard.hlsli  ReservoirAddressing.hlsli
Source/: ImportanceSamplingContext.cpp  RISBufferSegmentAllocator.cpp  ReGIR.cpp  ReSTIRDI.cpp  ReSTIRGI.cpp  RtxdiUtils.cpp
include/rtxdi/: ReSTIRDI.h  ReSTIRGI.h
src/: ReGIR.cpp  RtxdiUtils.cpp
